# minitorch

./: pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: minitorch.ipynb
minitorch/: tensor.py
minitorch/nn/: __init__.py
